Macro tab: Fixed: Conductivity meter appears behind its control box
# 0.00.100 (56211) Sep 6, 2011
Water tab: remove less water molecules when adding sucrose
Water tab: Added developer control to control water removal when adding sucrose
# 0.00.99 (56204) Sep 6, 2011
Water tab: Keep the water density more constant when adding sucrose
Changed the time scale to 0.06 instead of 0.04
# 0.00.98 (56197) Sep 6, 2011
Prevent the shakers from being dragged offscreen
Improved error handling and docs
Moved sugar-and-salt-solutions faucet to piccolo-phet
Internal changes to separate code from first two tabs
Water tab: Fixed: Sucrose repels each other because C12H22O11 has net charge of +11
Updated internationalization
# 0.00.97 (55827) Aug 26, 2011
Micro tab: Added a workaround for completely dissolving any crystals that have become disconnected as a result of partial dissolving
Micro tab: Fixed: Calcium Chloride says "remove solutes" instead of "remove solute"
Micro tab: Move all particles toward the drain with a random walk, with nearer particles moving faster
Micro tab: Incremental progress toward draining according to formula ratios
Micro tab: During crystal growth, ensure crystals grow by complete formula units instead of by particle
Micro tab: Improvements for initial crystal creation, with emphasis on making sure it matches the formula ratio
Micro tab: Require one formula unit when creating a new crystal, particularly for CaCl2
Micro tab: Ensure crystals are initialized according to the formula ratio
Micro tab: Added tests for conformance to formula ratio
Micro tab: Ensure crystals dissolve according to the formula ratio
Water tab: Fixed: when dropping a Na+ or Cl- crystal outside the play area it should go back to the play area
Micro tab: Moved the faucet further from the beaker
Water tab: Increased bucket size to accommodate new compound sizes
Water tab: Moved the reset all button below the control panel and colored like other tabs