@@ -1,3 +1,4 @@
+Macro tab: Show the solute control panel node behind the shaker node so the conductivity tester will also go in front
 Macro tab: Fixed: Conductivity meter appears behind its control box
 # 0.00.100 (56211) Sep 6, 2011
 Water tab: remove less water molecules when adding sucrose
